<resources>
    <string name="app_name">My Application</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="number2">Number2</string>
    <string name="number1">Number1</string>
    <string name="calculator">Calculator</string>
    <string name="sub">SUB</string>
    <string name="mul">MUL</string>
    <string name="div">DIV</string>
</resources>